force-app/main/default/objects/CodeCoverage__c/CodeCoverage__c.object-meta.xml
<CustomObject>
    <description>This object is part of the org management unlocked package. It is used to keep track code coverage for every class from each test run.</description>
    <label>Code Coverage</label>
    <nameField>
        <displayFormat>CC-{0000000000}</displayFormat>
        <label>Code Coverage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Code Coverages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>