force-app/main/default/objects/CodeCoverage__c/fields/ApexClassOrTriggerName__c.field-meta.xml
<CustomField>
    <fullName>ApexClassOrTriggerName__c</fullName>
    <description>The apex class or trigger name.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The apex class or trigger name.</inlineHelpText>
    <label>ApexClass Or TriggerName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>