force-app/main/default/objects/CodeCoverage__c/fields/CodeCoveragePercentage__c.field-meta.xml
<CustomField>
    <fullName>CodeCoveragePercentage__c</fullName>
    <description>The total code coverage percentage for the class or trigger.</description>
    <formula>IF(TotalLines__c &gt; 0, LinesCovered__c/TotalLines__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total code coverage percentage for the class or trigger.</inlineHelpText>
    <label>Code Coverage Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>