force-app/main/default/objects/CodeCoverage__c/fields/CoverageStatus__c.field-meta.xml
<CustomField>
    <fullName>CoverageStatus__c</fullName>
    <formula
    >IMAGE(IF(CodeCoveragePercentage__c &gt;= 0.75 &amp;&amp; CodeCoveragePercentage__c &lt; 0.85, &quot;/img/samples/flag_yellow.gif&quot;, IF(CodeCoveragePercentage__c &gt;
        0.85, &quot;/img/samples/flag_green.gif&quot;, &quot;/img/samples/flag_red.gif&quot;) ),&quot;Percentage&quot;)</formula>
    <label>Coverage Status</label>
    <type>Text</type>
</CustomField>