force-app/main/default/objects/CodeCoverage__c/fields/LinesNotCovered__c.field-meta.xml
<CustomField>
    <fullName>LinesNotCovered__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The total number of lines not covered by unit tests.</description>
    <inlineHelpText>The total number of lines not covered by unit tests.</inlineHelpText>
    <label>Lines Not Covered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>