force-app/main/default/objects/CodeCoverage__c/fields/TestRun__c.field-meta.xml
<CustomField>
    <fullName>TestRun__c</fullName>
    <description>The related test run that initiated the code coverage.</description>
    <inlineHelpText>The related test run that initiated the code coverage.</inlineHelpText>
    <label>Test Run</label>
    <referenceTo>Test_Run__c</referenceTo>
    <relationshipLabel>Code Coverages</relationshipLabel>
    <relationshipName>Code_Coverages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>